--- a/Project_2/Gradient_Descent_Ackley_func.ipynb
+++ b/Project_2/Gradient_Descent_Ackley_func.ipynb
@@ -371,13 +371,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb2545a5e1e645be88804e19e3184941",
+       "model_id": "f03e580ea0d34df6b3e0dd932d8e8f8c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -385,14 +385,13 @@
        "interactive(children=(FloatSlider(value=0.1, description='C₁:', max=0.8, min=0.1, step=0.01), FloatSlider(valu…"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as pt\n",
+    "#for slider for c1 and ⍴ values\n",
     "from ipywidgets import interactive, FloatSlider\n",
     "import ipywidgets as widgets\n",
     "\n",
@@ -403,7 +402,7 @@
     "\n",
     "    colors = [\"red\", \"limegreen\", \"blue\"]\n",
     "    for k in range(3):\n",
-    "        gd_backtrack = grad_descent_backtracking(ackley_2d, start_points[k+1], c1, rho)\n",
+    "        gd_backtrack = grad_descent_backtracking(ackley_2d, start_points[k+1], c1, rho) #claculate path for gradient descent with backtracking\n",
     "        ax[0].scatter(gd_backtrack[:,0], gd_backtrack[:,1], color=colors[k], s=10, marker='o')\n",
     "        ax[0].plot(gd_backtrack[:, 0], gd_backtrack[:, 1], color=colors[k], label=f\"starting point: {gd_backtrack[0, 0]}, {gd_backtrack[0, 1]}\")\n",
     "        z = ackley_2d(gd_backtrack[:, 0], gd_backtrack[:, 1])\n",
